# flow

./: .cache_instructions.json  .gitignore  README.md  aim.md  pyproject.toml  pytest.ini  refactor_cli.py  refactor_cli_awaits.py  verification_report.json  verification_report.md
.index/: GLOSSARY.md  README.md
backend/: README.md  pyproject.toml
docs/: ai_model_invocation_guide.md  architecture.md  ipc-independent-dev-playbook.md  ipc-protocol-v2.md  reusable-review-flow.md
flow_engine/: __init__.py  app.py  (+7 more)
flow_engine.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
frontend/: README.md  hud_config.example.toml  pyproject.toml
frontend/flow_hud/: __init__.py  ipc_settings.py  main.py  runtime.py  windows_main.py
frontend/flow_hud/adapters/: debug_text_plugin.py  ipc_messages.py  ui_canvas.py
frontend/flow_hud/core/: __init__.py  app.py  config.py  events.py  events_payload.py  hooks.py  hooks_payload.py  service.py  state_machine.py  widget_slots.py
frontend/flow_hud/plugins/: __init__.py  context.py  registry.py
frontend/flow_hud/plugins/ipc/: codec.py  plugin.py  protocol.py  session.py  transport.py
frontend/flow_hud/task_status/: __init__.py  controller.py  models.py  plugin.py  widget.py
frontend/flow_hud/ui_tokens/: __init__.py  canvas.py  runtime.py  task_status.py
frontend/tests/: conftest.py  spike_ipc_client.py  test_gui_prereq.py
frontend/tests/hud/: test_hooks.py  test_hud_config_contract.py  test_ipc_client_plugin.py  test_lifecycle_runtime.py  test_runtime_profiles.py  test_service_contract.py  test_state_machine.py  test_task_flow_contract.py  test_task_status_controller.py  test_task_status_plugin.py  test_transition_runtime.py  test_widget_runtime.py
shared/: pyproject.toml
shared/flow_ipc/: __init__.py  codec.py  constants.py  models.py
(+359 files in other folders)
