[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flow-engine"
version = "0.1.0"
description = "心流引擎 — 用严苛的单任务协议对抗多任务焦虑"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    "click>=8.1",
    "toml>=0.10",
    "gitpython>=3.1",
    "httpx>=0.27",
]

[project.optional-dependencies]
ai = ["openai>=1.0"]
tui = ["textual>=0.50"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "ruff>=0.3",
]

[project.scripts]
flow = "flow_engine.cli:main"

[tool.setuptools.packages.find]
include = ["flow_engine*", "flow_hud*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
