[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flow-hud"
version = "0.1.0"
description = "Flow HUD frontend workspace"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    "toml>=0.10",
]

[project.optional-dependencies]
gui = ["PySide6>=6.6"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "ruff>=0.3",
]

[project.scripts]
flow-hud = "flow_hud.main:main"

[tool.setuptools.packages.find]
include = ["flow_hud*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
