[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flow-ipc"
version = "0.1.0"
description = "Shared Flow IPC V2 contract package"
requires-python = ">=3.11"
license = { text = "MIT" }

[tool.setuptools.packages.find]
include = ["flow_ipc*"]
